<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewAltura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="Altura"
        app:layout_constraintBottom_toTopOf="@+id/txtAltura"
        app:layout_constraintStart_toStartOf="@+id/txtAltura"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewIdade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="8dp"
        android:text="Idade"
        app:layout_constraintBottom_toTopOf="@+id/txtIdade"
        app:layout_constraintStart_toStartOf="@+id/txtIdade"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <EditText
        android:id="@+id/txtIdade"
        android:layout_width="99dp"
        android:layout_height="41dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="33dp"
        android:digits="0123456789"
        android:ellipsize="start"
        android:gravity="center"
        android:inputType="number"
        android:textColorHighlight="#575C60"
        android:textColorLink="#565B5F"
        android:textCursorDrawable="@color/colorPrimaryDark"
        app:layout_constraintEnd_toStartOf="@+id/txtAltura"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewPeso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="Peso"
        app:layout_constraintBottom_toTopOf="@+id/txtPeso"
        app:layout_constraintStart_toStartOf="@+id/txtPeso" />

    <EditText
        android:id="@+id/txtPeso"
        android:layout_width="166dp"
        android:layout_height="41dp"
        android:layout_marginTop="128dp"
        android:autoText="false"
        android:digits="0123456789."
        android:ellipsize="start"
        android:gravity="center"
        android:inputType="number"
        android:textColorHighlight="#575C60"
        android:textColorLink="#575C60"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.735"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/txtAltura"
        android:layout_width="167dp"
        android:layout_height="42dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="36dp"
        android:digits="0123456789."
        android:ellipsize="start"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textColorHighlight="#575C60"
        android:textColorLink="#575C60"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/txtPeso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.761"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="224dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:onClick="btnCalcularOnClick"
        android:text="CALCULAR"
        android:textColorLink="#282D31"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.905"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPeso"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button3"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:onClick="btnLimparOnClick"
        android:text="Limpar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonWoman"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/lblResultado"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:foregroundGravity="center"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#565B5F"
        android:textSize="12sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/lblResultado2"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:foregroundGravity="center"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#565B5F"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginBottom="12dp"
        android:text="kg"
        app:layout_constraintBottom_toBottomOf="@+id/txtPeso"
        app:layout_constraintStart_toEndOf="@+id/txtPeso" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="27dp"
        android:layout_height="19dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginBottom="12dp"
        android:text="m"
        app:layout_constraintBottom_toBottomOf="@+id/txtAltura"
        app:layout_constraintStart_toEndOf="@+id/txtAltura" />

    <Button
        android:id="@+id/buttonWoman"
        android:layout_width="32dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/imgbuttonwoman"
        app:layout_constraintEnd_toStartOf="@+id/txtPeso"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtIdade" />

    <Button
        android:id="@+id/buttonMan"
        android:layout_width="32dp"
        android:layout_height="54dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:background="@drawable/imgbuttonman"
        app:layout_constraintEnd_toStartOf="@+id/txtPeso"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/buttonWoman"
        app:layout_constraintTop_toBottomOf="@+id/txtIdade" />

    <ImageView
        android:id="@+id/imageViewResultado"
        android:layout_width="357dp"
        android:layout_height="193dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblResultado"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/imc00" />

    <EditText
        android:id="@+id/sexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="75dp"
        tools:layout_editor_absoluteY="-49dp"
        tools:visibility="invisible" />


</androidx.constraintlayout.widget.ConstraintLayout>